codemp/generated/game/NPC_behavior.h

void NPC_BSAdvanceFight();
void Disappear( gentity_t *self );
void BeamOut( gentity_t *self );
void NPC_BSCinematic();
void NPC_BSWait();
void NPC_BSInvestigate();
qboolean NPC_CheckInvestigate( int alertEventNum );
void NPC_BSSleep();
void NPC_BSFollowLeader();
void NPC_BSJump();
void NPC_BSRemove();
void NPC_BSSearch();
void NPC_BSSearchStart( int homeWp, bState_t bState );
void NPC_BSNoClip();
void NPC_BSWander();
void NPC_Surrender();
qboolean NPC_CheckSurrender();
void NPC_BSFlee();
void NPC_StartFlee( gentity_t *enemy, vec3_t dangerPoint, int dangerLevel, int fleeTimeMin, int fleeTimeMax );
void G_StartFlee( gentity_t *self, gentity_t *enemy, vec3_t dangerPoint, int dangerLevel, int fleeTimeMin, int fleeTimeMax );
void NPC_BSEmplaced();